working registration, added controller, user manager, user repository, user model, registration form

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -4,6 +4,11 @@
 </head>
 <body>
 <nav class="navbar navbar-fixed-top" th:fragment="navbar">
+    <ul class="nav navbar-nav navbar-right">
+        <li>
+            <a href="#" th:href="@{/registration}">Register</a>
+        </li>
+    </ul>
 </nav>
 </body>
 </html>
