--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,17 +5,17 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-    <form action="#" th:action="@{/registration}" th:object="${user}" method="post">
+    <form action="#" th:action="@{/registration}" th:object="${userData}" method="post">
         <table>
             <tr>
                 <td>First Name</td>
                 <td><input class="form-control" type="text" th:field="*{firstName}"/></td>
-                <td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Login Error</td>
+                <td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First name error</td>
             </tr>
             <tr>
                 <td>Last Name</td>
                 <td><input class="form-control" type="text" th:field="*{lastName}"/></td>
-                <td th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></td>
+                <td th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last name error</td>
             </tr>
             <tr>
                 <td>Email</td>
