--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="head :: head">
-</head>
+<head th:replace="head :: head"></head>
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
