--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,9 +18,8 @@
             </tr>
             <tr>
                 <td>Email</td>
-                <td><input class="form-control" type="email" th:field="*{email}"/></td>
+                <td><input class="form-control" type="email" th:field="*{username}"/></td>
                 <td th:if="${existingEmail}" th:text="${existingEmail}">Existing email error</td>
-
             </tr>
             <tr>
                 <td>Password</td>
