--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,6 +26,9 @@
     <div th:if="${param.error}">
         Invalid email and password.
     </div>
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
 </div>
 </body>
 </html>
