user status mode, user profile template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head th:replace="head :: head">
 </head>
 <body>
-<nav th:replace="navbar :: navbar">
+<nav th:replace="navbar :: navbar"></nav>
 
-</nav>
+
 </body>
 </html>
