--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -4,6 +4,13 @@
 <body>
 <nav class="navbar navbar-fixed-top" th:fragment="navbar">
     <div class="container">
+        <ul class="nav navbar-nav navbar-left">
+            <li>
+                <form th:action="@{'/status'}" method="get"></form>
+                <a href="#" th:href="@{/status}">Add status</a>
+            </li>
+        </ul>
+
         <ul class="nav navbar-nav navbar-right">
             <li sec:authorize="isAnonymous()">
                 <a href="#" th:href="@{/registration}">Register</a>
@@ -12,8 +19,8 @@
                 <a href="#" th:href="@{/login}">Sign in</a>
             </li>
             <li sec:authorize="isAuthenticated()">
-                <form th:action="@{'/userProfile/' + ${}"></form>
-                <a href="#" sec:authentication="name" >Username</a>
+                <form th:action="@{'/userprofile/1'}" method="get" id="profile"></form>
+                <a href="#" sec:authentication="name" onclick="document.getElementById('profile').submit()" >Username</a>
             </li>
             <li sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" method="post" id="logout"></form>
