--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -4,8 +4,10 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-    <div class="status">
-        <p th:each="status : ${statuses}" th:text="${status.content}"></p>
+    <div class="status" th:each="status : ${statuses}">
+        <p th:text="*{status.date}"></p>
+        <p th:text="${status.content}"></p>
+        <br>
     </div>
 </div>
 </body>
