added status interface, now date in statuses are working

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -5,7 +5,7 @@
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
     <div class="status" th:each="status : ${statuses}">
-        <p th:text="*{status.date}"></p>
+        <p th:text="${status.date}"></p>
         <p th:text="${status.content}"></p>
         <br>
     </div>
