--- a/src/main/resources/templates/status.html
+++ b/src/main/resources/templates/status.html
@@ -5,7 +5,7 @@
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
     <form th:action="@{/status}" th:object="${add}" method="post">
-        <input type="text" th:field="*{content}"/>
+        <textarea rows="4" cols="50" th:field="*{content}"></textarea>
         <button class="btn btn-default" id="add" type="submit">Add status</button>
     </form>
 </div>
