--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -4,6 +4,12 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
+    <div class="add">
+        <form th:action="@{/userprofile/1}" th:object="${add}" method="post">
+            <textarea rows="4" cols="50" th:field="*{content}"></textarea>
+            <button class="btn btn-default" id="add" type="submit">Add status</button>
+        </form>
+    </div>
     <div class="status" th:each="status : ${statuses}">
         <p th:text="${status.date}"></p>
         <p th:text="${status.content}"></p>
