added foreign key in userstatus, showing name of preson who added comment on profile

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -11,6 +11,7 @@
         </form>
     </div>
     <div class="status" th:each="status : ${statuses}">
+        <p th:text="*{status.addingUserId.firstName}"></p>
         <p th:text="${status.date}"></p>
         <p th:text="${status.content}"></p>
         <br>
