first name and last name of person who write status is displayed

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -11,7 +11,7 @@
         </form>
     </div>
     <div class="status" th:each="status : ${statuses}">
-        <p th:text="*{status.addingUserId.firstName}"></p>
+        <p th:text="${status.addingUserId.firstName} + ' ' + ${status.addingUserId.lastName}"></p>
         <p th:text="${status.date}"></p>
         <p th:text="${status.content}"></p>
         <br>
