--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -4,17 +4,22 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-    <div class="add">
-        <form th:action="@{'/userprofile/' + ${userId}}" th:object="${add}" method="post">
-            <textarea rows="4" cols="50" th:field="*{content}"></textarea>
-            <button class="btn btn-default" id="add" type="submit">Add status</button>
-        </form>
+    <div class="existingUser" th:if="${nonExistingUser == null}">
+        <div class="add">
+            <form th:action="@{'/userprofile/' + ${userId}}" th:object="${add}" method="post">
+                <textarea rows="4" cols="50" th:field="*{content}"></textarea>
+                <button class="btn btn-default" id="add" type="submit">Add status</button>
+            </form>
+        </div>
+        <div class="status" th:each="status : ${statuses}">
+            <p th:text="${status.addingUser.firstName} + ' ' + ${status.addingUser.lastName}"></p>
+            <p th:text="${status.date}"></p>
+            <p th:text="${status.content}"></p>
+            <br>
+        </div>
     </div>
-    <div class="status" th:each="status : ${statuses}">
-        <p th:text="${status.addingUserId.firstName} + ' ' + ${status.addingUserId.lastName}"></p>
-        <p th:text="${status.date}"></p>
-        <p th:text="${status.content}"></p>
-        <br>
+    <div class="nonExistingUser" th:if="${nonExistingUser}">
+        <h1 th:text="${nonExistingUser}"></h1>
     </div>
 </div>
 </body>
