--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -5,9 +5,17 @@
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
     <h1>Results:</h1>
-    <div th:object="${users}" th:each="user : ${users}">
-        <p th:text="${user.firstName} + ' ' + ${user.lastName}"></p>
-    </div>
+    <table>
+        <tr th:object="${users}" th:each="user : ${users}">
+            <td th:text="${user.firstName} + ' ' + ${user.lastName}"></td>
+
+            <form action="#" th:action="@{'/userprofile/' + ${user.id}}" method="get">
+                <td>
+                    <button class="btn btn-default">Profile</button>
+                </td>
+            </form>
+        </tr>
+    </table>
 </div>
 </body>
 </html>
