cant edit others statuses

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,3 +19,12 @@
 .status .buttons form {
     display: inline-block;
 }
+
+.status form textarea{
+    display: block;
+}
+
+.status form {
+    display: inline-block;
+}
+
