--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,15 +6,14 @@
 <div id="content" class="container">
     <div class="status">
         <form th:action="@{'/userprofile/' + ${userStatus.userId} + '/edit/' + ${userStatus.statusId}}" th:object="${userStatus}" method="post">
+            <p th:text="*{date}"></p>
             <textarea th:text="*{content}" th:field="*{content}"></textarea>
             <button class="btn btn-default" type="submit">Done</button>
         </form>
         <form th:action="@{'/userprofile/' + ${userStatus.userId}}" method="get">
             <button class="btn btn-default" type="submit">Cancel</button>
         </form>
-
     </div>
-
 </div>
 </body>
 </html>
