adding comments with some problems

--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -16,7 +16,18 @@
             <p th:text="${status.addingUser.firstName} + ' ' + ${status.addingUser.lastName}"></p>
             <p th:text="${status.date}"></p>
             <p th:text="${status.content}"></p>
-            <textarea rows="1" cols="40" placeholder="Add comment"></textarea>
+            <div class="comment">
+                <form th:action="@{'/userprofile/' + ${userProfile.id}}" th:object="${addComment}" method="post">
+                    <textarea rows="1" cols="40" placeholder="Add comment" th:field="*{content}"></textarea>
+                    <button class="btn btn-default" id="addComment" type="submit">Add comment</button>
+                </form>
+                <div class="comments" th:each="comment : ${comments}">
+                    <p th:text="${comment.userStatus.addingUser.firstName} + ' ' + ${comment.userStatus.addingUser.lastName}"></p>
+                    <p th:text="${comment.date}"></p>
+                    <p th:text="${comment.content}"></p>
+                </div>
+            </div>
+
             <div class="buttons">
                 <form th:if="${loggedUserId} == ${status.userId} or ${loggedUserId} == ${status.addingUser.id}"
                       th:action="@{'/userprofile/' + ${userProfile.id} + '/delete/' + ${status.statusId}}" method="get">
