--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -35,7 +35,7 @@
                 </form>
                 <!-- here, write this to show only comments for status -->
                 <div class="comments" th:each="comment : ${comments}" >
-                    <p th:text="${comment.userStatus.addingUser.firstName} + ' ' + ${comment.userStatus.addingUser.lastName}"></p>
+                    <p th:text="${comment.addingUser.firstName} + ' ' + ${comment.addingUser.lastName}"></p>
                     <p th:text="${comment.date}"></p>
                     <p th:text="${comment.content}"></p>
                 </div>
