--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -4,15 +4,21 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-    <div class="status">
-        <form th:action="@{'/userprofile/' + ${userStatus.userId} + '/edit/' + ${userStatus.statusId}}" th:object="${userStatus}" method="post">
-            <p th:text="*{date}"></p>
-            <textarea th:text="*{content}" th:field="*{content}"></textarea>
-            <button class="btn btn-default" type="submit">Done</button>
-        </form>
-        <form th:action="@{'/userprofile/' + ${userStatus.userId}}" method="get">
-            <button class="btn btn-default" type="submit">Cancel</button>
-        </form>
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <div class="status">
+                <form th:action="@{'/userprofile/' + ${userStatus.userId} + '/edit/' + ${userStatus.statusId}}"
+                      th:object="${userStatus}" method="post">
+                    <p th:text="*{date}"></p>
+                    <textarea id="editStatus" th:text="*{content}" th:field="*{content}"></textarea>
+                    <button class="btn btn-default" type="submit">Done</button>
+                </form>
+                <form th:action="@{'/userprofile/' + ${userStatus.userId}}" method="get">
+                    <button class="btn btn-default" type="submit">Cancel</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 </body>
