--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -54,12 +54,27 @@
                                  th:if="${comment.userStatus.statusId == status.statusId}">
                                 <p th:text="${comment.addingUser.firstName} + ' ' + ${comment.addingUser.lastName}"></p>
                                 <p class="date" th:text="${comment.date}"></p>
-                                <p th:text="${comment.content}"></p>
-                                <form th:if="${loggedUserId} == ${comment.userId} or ${loggedUserId} == ${comment.addingUser.id}"
-                                      th:action="@{'/deletecomment/' + ${userProfile.id} + '/' + ${comment.commentId}}"
-                                      method="post">
-                                    <button class="btn btn-default" type="submit">Delete</button>
-                                </form>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p th:text="${comment.content}"></p>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <div class="dropdown">
+                                            <button class="btn btn-primary dropdown-toggle menu" type="button"
+                                                    data-toggle="dropdown"><span
+                                                    class="caret"></span></button>
+                                            <ul class="dropdown-menu">
+                                                <li>
+                                                    <form th:if="${loggedUserId} == ${comment.userId} or ${loggedUserId} == ${comment.addingUser.id}"
+                                                          th:action="@{'/deletecomment/' + ${userProfile.id} + '/' + ${comment.commentId}}"
+                                                          method="post">
+                                                        <button class="btn btn-default" type="submit">Delete</button>
+                                                    </form>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
 
