--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -65,6 +65,13 @@
                                                     class="caret"></span></button>
                                             <ul class="dropdown-menu">
                                                 <li>
+                                                    <form th:if="${loggedUserId} == ${comment.addingUser.id}"
+                                                          th:action="@{'/userprofile/' + ${userProfile.id} + '/editcomment/' + ${comment.commentId}}"
+                                                          method="get">
+                                                        <button class="btn btn-default" type="submit">Edit</button>
+                                                    </form>
+                                                </li>
+                                                <li>
                                                     <form th:if="${loggedUserId} == ${comment.userId} or ${loggedUserId} == ${comment.addingUser.id}"
                                                           th:action="@{'/userprofile/' + ${userProfile.id} + '/deletecomment/' + ${comment.commentId}}"
                                                           method="post">
@@ -76,7 +83,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <form th:action="@{'/userprofile/' + ${userProfile.id} + '/addcomment/' + ${status.statusId}}"
                                   th:object="${addComment}" method="post">
                         <textarea id="addComment" rows="1" cols="40" placeholder="Add comment"
