--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -6,7 +6,11 @@
 <div id="content" class="container">
     <div class="existingUser" th:if="${nonExistingUser == null}">
         <div class="row">
-            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                <form  th:action="@{/friends}">
+                    <button type="submit">Friends</button>
+                </form>
+            </div>
             <div class="col-md-6">
                 <h1 th:text="${userProfile.firstName} + ' ' + ${userProfile.lastName}"></h1>
                 <div class="add">
