--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -7,7 +7,7 @@
     <div class="existingUser" th:if="${nonExistingUser == null}">
         <div class="row">
             <div class="col-md-3">
-                <form  th:action="@{/friends}">
+                <form  th:action="@{'/friends/' + ${userProfile.id}}">
                     <button type="submit">Friends</button>
                 </form>
             </div>
