cant add the same user to friends list again

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
     <h1 th:if="${privilege}" th:text="${privilege}"></h1>
+    <h1 th:if="${sameUser}" th:text="${sameUser}"></h1>
+    <h1 th:if="${haveThisFriend}" th:text="${haveThisFriend}"></h1>
 </div>
 </body>
 </html>
