--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -5,7 +5,9 @@
 <body>
 <nav th:replace="navbar :: navbar"></nav>
 <div id="content" class="container">
-
+    <h1 th:if="${privilege}" th:text="${privilege}"></h1>
+    <h1 th:if="${sameUser}" th:text="${sameUser}"></h1>
+    <h1 th:if="${haveThisFriend}" th:text="${haveThisFriend}"></h1>
 </div>
 </body>
 </html>
