--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -13,7 +13,7 @@
                     <button class="btn btn-default">Profile</button>
                 </td>
             </form>
-            <form th:action="@{'/addfriend/' + ${user.id}}" method="post">
+            <form th:if="${user.id != loggedUserid}" th:action="@{'/addfriend/' + ${user.id}}" method="post">
                 <td>
                     <button class="btn btn-default">Add to friends</button>
                 </td>
